    greater than 2GB expressed in bytes. (Hao Xia via kasha)

    MAPREDUCE-6396. TestPipeApplication fails by NullPointerException.
    (Brahma Reddy Battula via aajisaka)

    MAPREDUCE-6406. Update FileOutputCommitter.FILEOUTPUTCOMMITTER_ALGORITHM_VERSION_DEFAULT
    to match mapred-default.xml. (Ray Chiang via devaraj)

  BREAKDOWN OF MAPREDUCE-2841 (NATIVE TASK) SUBTASKS

    MAPREDUCE-5985. native-task: Fix build on macosx. Contributed by
    Binglin Chang

    MAPREDUCE-5994. Simplify ByteUtils and fix failing test. (todd)

    MAPREDUCE-5996. native-task: Rename system tests into standard directory
    layout (todd)

    MAPREDUCE-5997. native-task: Use DirectBufferPool from Hadoop Common (todd)

    MAPREDUCE-6000. native-task: Simplify ByteBufferDataReader/Writer (todd)

    MAPREDUCE-5991. native-task should not run unit tests if native profile is
    not enabled. (Binglin Chang)

    MAPREDUCE-5995. native-task: Revert changes to Text internals (todd)

    MAPREDUCE-6005. native-task: Fix some valgrind errors (Binglin Chang)

    MAPREDUCE-5984. native-task: Reuse lz4 sources in hadoop-common (Binglin
    Chang)

    MAPREDUCE-5976. native-task: should not fail to build if snappy is missing
    (Manu Zhang)

    MAPREDUCE-5978. native-task: remove test case for not supported codec
    Bzip2Codec and DefaultCodec (Manu Zhang)

    MAPREDUCE-6006. native-task: add native tests to maven and fix bug in
    pom.xml (Binglin Chang via todd)

    MAPREDUCE-6026. native-task: fix logging (Manu Zhang via todd)

    MAPREDUCE-6035. native-task: sources/test-sources jar distribution (Manu
    Zhang via todd)

    MAPREDUCE-5977. Fix or suppress native-task gcc warnings (Manu Zhang via
    todd)

    MAPREDUCE-6054. native-task: Speed up tests (todd)

    MAPREDUCE-6058. native-task: KVTest and LargeKVTest should check mr job is
    sucessful (Binglin Chang)

    MAPREDUCE-6056. native-task: move system test working dir to target dir and